# Cortex-OS

./: .budget.yml  .coverage.Mac-Studio.local.41091.Xzecoccx  .dependency-cruiser.js  .dependency-cruiser.mcp.cjs  .dockerignore  .editorconfig  .env.development.example  .env.example  .env.local  .env.mlx.example  .env.performance  .env.staging.example  .envrc  .eslint-full.json  .eslint-head.json  .eslint-tail.json  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitleaks.toml  .gitmodules  .graphite_config  .hadolint.yaml  .lighthouserc.js  .lintstagedrc.json  .markdownlint-cli2.yaml  .markdownlintignore  .mermaidrc  .mise.toml  .npmrc  .nxignore  .pre-commit-brainwav-tdd.yaml  .pre-commit-config-lite.yaml  .pre-commit-config.yaml  .prettierignore  .rgignore  .semgrep.yml  .semgrepignore  .sgignore  (+271 more)
apps/cortex-code/: .dockerignore  .syncignore  A2A_IMPLEMENTATION.md  AGENTS.md  CODEX_INTEGRATION.md  CODEX_STYLE_USAGE.md  CODEX_VS_CORTEX_ANALYSIS.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  CORTEX_CODE_DOCUMENTATION.md  Cargo.toml  Cargo_backup.toml  Cargo_minimal.toml  Dockerfile  Dockerfile.dev  Dockerfile.fixed  FEATURE_IDEAS.md  FEATURE_TRANSFER_PLAN.md  FINAL_STATUS.md  HOW_TO_RECREATE_CODEX.md  LICENSE-APACHE  LICENSE-MIT  MISSING_FEATURES.md  MODEL_PICKER.md  PNPM.md  README.md  SOFTWARE_ENGINEERING_PLAN.md  UPSTREAM_REF  UPSTREAM_SYNC.md  build.sh  config.toml.example  cortex.json  default.nix  fix_global_settings.sh  flake.nix  install  issues.json  justfile  project.json  rustc-ice-2025-09-07T13_22_02-71310.txt
apps/cortex-code-broken/: COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  Cargo.toml  FEATURE_IDEAS.md  FEATURE_MAP.md  FEATURE_TRANSFER_PLAN.md  MCP_IMPLEMENTATION_COMPLETE.md  MISSING_FEATURES_ANALYSIS.md  STREAMING_IMPLEMENTATION_COMPLETE.md  UPGRADE_COMPLETE.md  cortex-code.rb  cortex.json
apps/cortex-code-broken/cortex-cli/: Cargo.toml
apps/cortex-code-broken/cortex-core/: Cargo.toml  prompt.md
apps/cortex-code-broken/cortex-mcp-server/: Cargo.toml
apps/cortex-code-broken/examples/: cloudflare_integration.rs
apps/cortex-code-broken/npm-package/: README.md
apps/cortex-code/.devcontainer/: README.md
apps/cortex-code/ansi-escape/: Cargo.toml
apps/cortex-code/apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
apps/cortex-code/arg0/: Cargo.toml
apps/cortex-code/chat-cli-plus/: Cargo.toml
apps/cortex-code/chatgpt/: Cargo.toml
apps/cortex-code/cli/: Cargo.toml
apps/cortex-code/codex-cli/: README.md
apps/cortex-code/codex-rs/: README.md
apps/cortex-code/common/: Cargo.toml
apps/cortex-code/config/: example.cortex.json
apps/cortex-code/core/: Cargo.toml  README.md
apps/cortex-code/cortex-common/: Cargo.toml
apps/cortex-code/cortex-core/: Cargo.toml
apps/cortex-code/cortex-exec/: Cargo.toml
apps/cortex-code/cortex-mcp-server/: Cargo.toml
apps/cortex-code/cortex-protocol/: Cargo.toml
apps/cortex-code/cortex-tui/: Cargo.toml
apps/cortex-code/docs/: ENHANCED_COMMANDS.md  cloudflare-tunnels.md  codestyle.md  codex-style-commands.md  enhanced-slash-commands.md  production-deployment.md
apps/cortex-code/exec/: Cargo.toml
apps/cortex-code/execpolicy/: Cargo.toml
apps/cortex-code/linux-sandbox/: Cargo.toml
apps/cortex-code/login/: Cargo.toml
apps/cortex-code/mcp-client/: Cargo.toml
apps/cortex-code/mcp-server/: Cargo.toml
apps/cortex-code/mcp-types/: Cargo.toml  generate_mcp_types.py
apps/cortex-code/npm-package/: package.json
apps/cortex-code/protocol/: Cargo.toml
apps/cortex-code/providers-ext/: Cargo.toml
apps/cortex-code/scripts/: codex-rs-subtree.sh  install.sh  upstream-diff.sh  upstream-status.sh
apps/cortex-code/src/: # Code Citations.md  app.rs  brainwav_integration.rs  cloud_provider_agnostic.rs  codex_cli.rs  codex_main.rs  config.rs  diagnostic_manager.rs  enhanced_config.rs  error.rs  error_panic_handler.rs  features.rs  lib.rs  main.rs  model_picker.rs  model_verification.rs
apps/cortex-code/tests/: lib.rs
apps/cortex-code/tui/: Cargo.toml
apps/cortex-code/xtask/: Cargo.toml
apps/cortex-codex/zai/: Cargo.toml
apps/cortex-py/: .coverage.Mac-Studio.local.81556.XIQpGWBx  .dockerignore  AGENTS.md  Dockerfile  Dockerfile.prod  README.md  coverage.json  demo_a2a.py  pyproject.toml  pytest.ini  smoke_test.py  tdd_coach_pytest_plugin.py  test_a2a_integration.py
apps/cortex-py/docs/: README.md  accessibility.md  api-reference.md  architecture.md  best-practices.md  changelog.md  cli-reference.md  configuration.md  contributor-setup.md  deployment.md  examples.md  faq.md  getting-started.md  glossary.md  introduction.md  logging-monitoring.md  mcp-tools.md  migration.md  performance.md  policy-terms.md  providers-setup.md  roadmap.md  security.md  testing.md  troubleshooting.md  user-guide.md
apps/cortex-py/src/: app.py
apps/cortex-py/tests/: conftest.py  test_a2a_integration.py  test_app.py  test_app_additional_branches.py  test_app_endpoints.py  test_app_error_and_normalization.py  test_auth_client.py  test_compute_mlx_available_env.py  test_cortex_py_comprehensive.py  (+26 more)
apps/cortex-rs/: Cargo.toml
apps/tdd-guard-fs/: Cargo.toml
config/requirements/: pyproject.toml  requirements-graphiti.txt
cortex-py/: Dockerfile  dev.sh  pyproject.toml  requirements-minimum.txt  requirements.txt  start.sh
cortex-py/config/: config.py
cortex-py/pipelines/: function_calling_filter_pipeline.py
cortex-py/runtime/: main.py  schemas.py
python/: README.md  demo-mlx-integration.py  install-mlx-tools.py  pyproject.toml
python/evals/: PLAN.md  run_agentops.py  run_embeddings.py  run_golden.py  run_ragas_eval.py  run_retrieval.py  schema.json
python/tests/: conftest.py  test-mlx-quick.py  test_eval_prompt.py  test_mcp_client.py  test_mcp_testing_utils.py  test_mcp_tool_base.py  test_mcp_tool_integration.py  test_mlx_quick.py  test_model_router_failover.py
services/data-pipeline/: pipeline.py  pyproject.toml
services/ml-inference/: CLEANUP_SUMMARY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
services/py-mlx-server/: Dockerfile  README.md  pyproject.toml
(+5030 files in other folders)
