[project]
name = "cortex-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.22.0",
  "pydantic==2.7.1",
  "python-multipart==0.0.9",
  "python-socketio",
  "grpcio",
  "passlib==1.7.4",
  "passlib[bcrypt]",
  "PyJWT[crypto]",
  "requests==2.32.2",
  "aiohttp==3.9.5",
  "httpx",
  "openai",
  "anthropic",
  "google-generativeai",
  "vertexai",
  "pymongo",
  "peewee",
  "SQLAlchemy",
  "boto3",
  "redis",
  "sqlmodel",
  "chromadb",
  "psycopg2-binary",
  "langfuse",
  "ddtrace",
  "opik",
  "torch",
  "numpy",
  "pandas",
  "xgboost",
  "scikit-learn",
  "sentence-transformers",
  "transformers",
  "tokenizers",
  "nltk",
  "tiktoken",
  "Pillow",
  "opencv-python",
  "matplotlib",
  "seaborn",
  "selenium",
  "playwright",
  "beautifulsoup4",
  "llama-index",
  "llama-index-llms-ollama"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
