[workspace]
members = [
    "cortex-common",
    "cortex-core",
    "cortex-exec",
    "cortex-protocol",
    "cortex-tui",
    "cortex-cli",
    "cortex-mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cortex-OS Team"]
license = "Apache-2.0"
repository = "https://github.com/jamiescottcraik/Cortex-OS"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# TUI framework
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = { version = "0.28.1", features = [
    "bracketed-paste",
    "event-stream",
] }

# CLI framework
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"

# Security
hmac = "0.12"
sha2 = "0.10"

# Async channels
async-channel = "2.3"

# Directories
directories = "5.0"

# Testing dependencies
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
async-trait = "0.1"
