[package]
name = "cortex-code"
version = "0.1.0"
edition = "2021"
authors = ["Cortex-OS Team"]
description = "Terminal UI for Cortex-OS AI coding agent"
license = "MIT"
repository = "https://github.com/cortex-os/cortex-os"

[[bin]]
name = "cortex-code"
path = "src/main.rs"

[dependencies]
# TUI Framework (exact Codex version)
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref"
]}
crossterm = "0.28.1"
tui-input = "0.14.0"
tui-markdown = "0.3.3"
ratatui-image = "8.0.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP & API
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
bytes = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration & CLI
clap = { version = "4", features = ["derive"] }
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Server components (for daemon mode)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# MCP integration
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.21"
rand = "0.9.2"
url = "2.5.7"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
# Testing
insta = { version = "1.34", features = ["yaml"] }
mockito = "1.2"
tempfile = "3"
tokio-test = "0.4"

# Test utilities
assert_matches = "1.5"
proptest = "1.4"

[build-dependencies]
# For build-time code generation if needed
