[package]
name = "cortex-code"
version = "0.1.0"
edition = "2021"
authors = ["Cortex-OS Team"]
description = "Terminal UI for Cortex-OS AI coding agent"
license = "MIT"
repository = "https://github.com/cortex-os/cortex-os"

[[bin]]
name = "cortex-code"
path = "src/main.rs"

[dependencies]
# Core TUI dependencies
ratatui = "0.26.0"
crossterm = "0.27.0"
tui-input = "0.10.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP & API - pinned to compatible versions
reqwest = { version = "=0.11.18", features = ["json", "stream"], default-features = false }
url = "=2.2.2"
idna = "=0.3.0"
bytes = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration & CLI
clap = { version = "4", features = ["derive"] }
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Server components (for daemon mode)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Streaming utilities
async-stream = "0.3"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4.30", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

# Basic security dependencies (compatible versions)
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
num_cpus = "1.0"

[dev-dependencies]
# Testing
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
