[project]
name = "cortex-py"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "pydantic>=2.0.0",
  "mlx>=0.29.0; sys_platform == 'darwin'",
  "mlx-lm>=0.27.0; sys_platform == 'darwin'",
  "mlx-vlm>=0.3.0; sys_platform == 'darwin'",
  "llama-cpp-python>=0.2.90",
  "sentence-transformers>=3.3.0",
  "transformers>=4.55.4",
  "torch>=2.8.0",
  "gguf>=0.1.0",
  "numpy>=1.26.4",
  "fastmcp>=0.2.0",
  "httpx>=0.27.0",
  "asyncio-throttle>=1.0.0",
  "pillow>=10.0.0",
  "codecarbon>=3.0.0",
  "deepeval>=1.2.0",
  "prometheus-client>=0.19.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7,<4",
  "slowapi>=0.1.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
agents = [
  "instructor>=1.3.0",
  "openai-agents-python @ git+https://github.com/openai/openai-agents-python.git",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6",
]
