[package]
name = "cortex-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
ratatui = "0.28"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
