[package]
name = "tdd-guard-fs"
version = "0.1.0"
edition = "2021"
description = "Tool-agnostic TDD enforcement via filesystem overlay"
license = "MIT"

[[bin]]
name = "tdd-guard-fs"
path = "src/main.rs"

[dependencies]
# Core functionality
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Filesystem overlay
fuse3 = "0.7"
libc = "0.2"

# State management and diffs
similar = "2.0"
walkdir = "2.0"
notify = "6.0"
tempfile = "3.0"

# Configuration and patterns
glob = "0.3"
regex = "1.0"
toml = "0.8"

# Process management
which = "6.0"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific FUSE
osxfuse = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific FUSE extensions
nix = "0.29"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
