[project]
name = "graphiti-deps"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "graphiti-core>=0.3.0",
  "networkx>=3.0",
  "neo4j>=5.0.0",
  "rdflib>=6.3.0",
  "sparqlwrapper>=2.0.0",
  "scikit-learn>=1.3.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "python-dateutil>=2.8.0",
  "asyncio-extras>=1.3.0",
  "uvloop>=0.17.0",
  "matplotlib>=3.7.0",
  "plotly>=5.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
