[project]
name = "cortex-data-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
description = "Data pipeline service"
dependencies = [
    "pandas>=2.0",
    "great-expectations>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["pipeline.py"]
