[project]
name = "cortex-data-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
description = "Data pipeline service"
dependencies = [
    "pandas>=2.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_data_pipeline"]
