[project]
name = "cortex-ml-inference"
version = "0.1.0"
# Aligned with root constraint for grpcio-tools compatibility
requires-python = ">=3.11,<3.13"
description = "ML inference microservice"
dependencies = ["fastapi", "uvicorn", "prometheus-client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = ["httpx", "pytest", "pytest-asyncio"]
