[project]
name = "cortex-py-mlx-server"
version = "0.1.0"
requires-python = ">=3.13"
description = "Experimental FastAPI server backed by optional MLX runtime"
dependencies = ["fastapi>=0.65.2", "uvicorn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = ["httpx", "pytest"]
