[package]
edition = "2021"
name = "cortex-cli"
version = { workspace = true }

[[bin]]
name = "cortex"
path = "src/main.rs"

[lib]
name = "cortex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
cortex-core = { path = "../cortex-core" }
cortex-exec = { path = "../cortex-exec" }
cortex-protocol = { path = "../cortex-protocol" }
cortex-tui = { path = "../cortex-tui" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
