[package]
edition = "2021"
name = "cortex-core"
version = { workspace = true }

[lib]
name = "cortex_core"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = "2.3.1"
base64 = "0.22"
bytes = "1.10.1"
chrono = { workspace = true }
cortex-protocol = { path = "../cortex-protocol" }
dirs = "6"
env-flags = "0.1.1"
eventsource-stream = "0.2.3"
futures = { workspace = true }
libc = "0.2.175"
mime_guess = "2.0"
os_info = "3.12.0"
portable-pty = "0.8"
rand = "0.8"
regex-lite = "0.1.7"
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sha1 = "0.10.6"
shlex = "1.3.0"
similar = "2.7.0"
strum_macros = "0.26"
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.16"
toml = { workspace = true }
toml_edit = "0.22"
tracing = { workspace = true }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
uuid = { workspace = true }
whoami = "1.6.1"
wildmatch = "2.4.0"
# Dependencies for enhanced modules
directories = "5.0"
num_cpus = "1.16"
async-trait = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting"] }
# ast-grep = "0.28"  # Temporarily disabled due to tree-sitter conflicts

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.1"
seccompiler = "0.5.0"

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
which = "6"

[dev-dependencies]
assert_cmd = "2"
maplit = "1.0.2"
predicates = "3"
pretty_assertions = "1.4.1"
tempfile = "3"
tokio-test = "0.4"
walkdir = "2.5.0"
wiremock = "0.6"
insta = { workspace = true }
async-trait = { workspace = true }
