[package]
edition = "2021"
name = "cortex-mcp-server"
version = { workspace = true }

[[bin]]
name = "cortex-mcp-server"
path = "src/main.rs"

[lib]
name = "cortex_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cortex-common = { path = "../cortex-common", features = ["cli"] }
cortex-core = { path = "../cortex-core" }
cortex-protocol = { path = "../cortex-protocol" }
## GitHub integration for MCP tools
cortex-github = { path = "../../../packages/github" }
schemars = "0.8.22"
serde = { workspace = true }
serde_json = { workspace = true }
shlex = "1.3.0"
strum_macros = "0.26"
tokio = { workspace = true }
toml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
pretty_assertions = "1.4.1"
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
