[package]
name = "codex-chat-cli-plus"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "codex-chat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-arg0 = { path = "../arg0" }
codex-common = { path = "../common", features = ["cli"] }
codex-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","io-std"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
