[package]
name = "cortex-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol types for Cortex CLI"

[dependencies]
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
mime_guess = "2.0"
tracing = { workspace = true }
