[package]
edition = "2021"
name = "cortex-tui"
version = { workspace = true }

[[bin]]
name = "cortex-tui"
path = "src/main.rs"

[lib]
name = "cortex_tui"
path = "src/lib.rs"

[features]
# Enable vt100-based tests (emulator) when running with `--features vt100-tests`.
vt100-tests = []
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arboard = "3"
async-stream = "0.3.6"
base64 = "0.22.1"
chrono = { workspace = true }
clap = { workspace = true }
cortex-core = { path = "../cortex-core" }
cortex-protocol = { path = "../cortex-protocol" }
color-eyre = "0.6.3"
crossterm = { workspace = true }
diffy = "0.4.2"
image = { version = "^0.25.6", default-features = false, features = [
    "jpeg",
    "png",
] }
itertools = "0.14.0"
lazy_static = "1"
once_cell = "1"
path-clean = "1.0.1"
rand = "0.8"
ratatui = { workspace = true }
regex-lite = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = "1.3.0"
strum = "0.26"
strum_macros = "0.26"
supports-color = "3.0.2"
tempfile = "3"
textwrap = "0.16.2"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }
tui-input = "0.14.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.1"
url = { workspace = true }
uuid = { workspace = true }
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
chrono = { workspace = true }
insta = "1.39"
pretty_assertions = "1"
rand = "0.8"
