[package]
name = "codex-providers-ext"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "codex_providers_ext"
path = "src/lib.rs"

[dependencies]
codex-core = { path = "../core" }
async-stream = "0.3"
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
http = "1.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
