[package]
name = "codex-zai"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "codex_zai"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
codex-core = { path = "../core" }
eventsource-stream = "0.2.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
